fix banner on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,7 +76,8 @@ pre {
   padding: 0;
   line-height: 20px !important;
   color: #ff9951;
-  font-family: "ascii", monospace;
+  font-family: "JetBrains Mono", monospace;
+  white-space: pre;
 }
 
 .banner-scroll {
